[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Crystal.gd" type="Script" id=1]
[ext_resource path="res://graphics/crystal.png" type="Texture" id=2]
[ext_resource path="res://graphics/particle3.png" type="Texture" id=3]
[ext_resource path="res://sound/pickup.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 19.1009

[sub_resource type="CanvasItemMaterial" id=2]

render_priority = 0
blend_mode = 1
light_mode = 0

[sub_resource type="Gradient" id=3]

offsets = PoolRealArray( 0.0414201, 0.118343, 0.662722, 0.893491 )
colors = PoolColorArray( 1, 1, 1, 0.743137, 0.0546875, 1, 0.933533, 0.97351, 1, 1, 1, 0.178353, 0, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]

flags = 4
gradient = SubResource( 3 )
width = 2048

[sub_resource type="Curve" id=5]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0.0195293, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.116498, 0.414062 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]

flags = 4
width = 2048
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 10.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 3.0
scale_random = 1.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Scale" ]

[sub_resource type="Gradient" id=8]

offsets = PoolRealArray( 0.0118343, 0.988166 )
colors = PoolColorArray( 0, 0.882813, 1, 1, 1, 1, 1, 0.872941 )

[sub_resource type="GradientTexture" id=9]

flags = 4
gradient = SubResource( 8 )
width = 2048

[sub_resource type="Curve" id=10]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0.00421838, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.270336, 0.0380859 ), 0.0, 0.0, 0, 0, Vector2( 0.473753, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.654567, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.785804, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]

flags = 4
width = 2048
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 4.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 90.0
flatness = 0.0
gravity = Vector3( 0, -50, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 10.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 0.5
scale_random = 0.0
scale_curve = SubResource( 11 )
color_ramp = SubResource( 9 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Damping", "Gravity", "Scale" ]

[node name="Crystal" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
value = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )

[node name="Pickup" type="Particles2D" parent="." index="2"]

material = SubResource( 2 )
emitting = false
amount = 40
lifetime = 0.8
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 1.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 7 )
texture = ExtResource( 3 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Material", "Process Material", "Textures", "Time" ]

[node name="Particles2D" type="Particles2D" parent="." index="3"]

emitting = true
amount = 3
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 12 )
texture = ExtResource( 3 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Transform" ]

[node name="remove_timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="pickup" type="AudioStreamPlayer2D" parent="." index="5"]

stream = ExtResource( 4 )
volume_db = -0.7
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="body_entered" from="." to="." method="_on_Crystal_body_entered"]

[connection signal="timeout" from="remove_timer" to="." method="_on_remove_timer_timeout"]


